--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,5 @@
 ---
 title: "Kindling Equity"
-description: |
-  Welcome to the website. I hope you enjoy it!
 site: distill::distill_website
 ---
 
@@ -12,4 +10,12 @@ knitr::opts_chunk$set(echo = FALSE)
 # https://rstudio.github.io/distill/website.html
 
 ```
+
+Kindling Equity is a team of Masters students from the Bren School of Environmental Science and Management interested in bringing equity to the wildfire planning and mitigation process.
+
+![](images/fire_watercolor.jpg)
+
+We are partnered with the Ventura Regional Fire Safe Council (VRFSC) to help facilitate the inclusion of socially vulnerable communities at risk of wildfire in the upcoming revision of the Ventura County Community Wildfire Protection Plan (CWPP).
+
+![](images/firesafe.png)
 
