--- a/team.Rmd
+++ b/team.Rmd
@@ -3,7 +3,7 @@ title: "Our Team"
 
 ---
 
-The Kindling Equity student team are all second year Masters of Environmental Science and Management (MESM) students at the Bren School of Environmental Science and Management at the University of California Santa Barbara.
+The Kindling Equity student team are all second year Masters of Environmental Science and Management (MESM) students at the Bren School of Environmental Science & Management at the University of California Santa Barbara.
 
 
 ## Bri Baker
