--- a/about.Rmd
+++ b/about.Rmd
@@ -6,10 +6,8 @@ title: "Kindling Equity"
 knitr::opts_chunk$set(echo = FALSE)
 ```
 
-Climate change increases the frequency and severity of wildfires across California, so there is an urgent need for wildfire preparedness and response in Ventura County. 
+Climate change is increasing the frequency and severity of wildfires across California, and there is an urgent need for wildfire preparedness and response in Ventura County, California. Simultaneously, socially vulnerable communities disproportionately lack access to resources and services to prepare for and recover from wildfires. As a result, they have a heightened risk of human suffering and property loss in the event of wildfire. 
 
-Socially vulnerable communities disproportionately lack access to resources and services to prepare and recover from wildfires. As a result, they have a heightened risk for human suffering and property loss in the event of wildfire. 
+In collaboration with the Ventura Fire Safe Council, our project seeks to identify socially vulnerable communities at risk of wildfire in Ventura County and to help update the Community Wildfire Protection Plan so that it equitably addresses community needs. 
 
-In collaboration with the Ventura Fire Safe Council, our project seeks to identify socially vulnerable communities at risk of wildfire and help to develop a Community Wildfire Protection Plan that equitably addresses community needs. 
-
-We will contribute to the field of wildfire management by providing a model that local governments and organizations can utilize to address social vulnerability concerns in the wildfire planning process. Our demonstrates effective methods for developing an accessible wildfire management plan that engages vulnerable communities to reduce local wildfire risk and increase community resilience with implications beyond Ventura County. 
+We will contribute to the field of wildfire management by providing a model that local governments and organizations can utilize to address social vulnerability concerns in the wildfire planning process. Our goal is to demonstrate effective methods for developing an accessible wildfire management plan that engages vulnerable communities to reduce local wildfire risk and increase community resilience with implications beyond Ventura County. 
