--- a/team.Rmd
+++ b/team.Rmd
@@ -3,47 +3,52 @@ title: "Our Team"
 
 ---
 ![](images/KE-team_core.jpg)
-The Kindling Equity student team are all second year Masters of Environmental Science and Management (MESM) students at the Bren School of Environmental Science & Management at the University of California, Santa Barbara.
+The Kindling Equity student team are graduates of the Masters of Environmental Science & Management (MESM) students at the Bren School of Environmental Science & Management at the University of California, Santa Barbara.
 
 
 ## Bri Baker
 
 ![](images/bri.jpg){width=50%}
 
-A Ventura County local, Bri works seasonally in California wildfire management and fire ecology. She is passionate about making wildfire and wildfire hazard more approachable and better understood by the public and is excited to serve her community by helping to elevate its marginalized voices.
-| [Linkedin](https://www.linkedin.com/in/brirosebaker/) |
+A Ventura County local, Bri worked seasonally in California wildfire management and fire ecology while in grad school. She is passionate about making fire ecology and wildfire hazard more approachable and better understood by the public and is excited to serve her community by helping to elevate its marginalized voices.
+
+ | [Linkedin](https://www.linkedin.com/in/brirosebaker/) |
 
 
 ## Yvonne Dinh
 
 ![](images/yvonne.jpg){width=50%}
 
-Originally from the East Coast, Yvonne has little experience with fire hazard but is excited to learn how it plays a role in the daily lives of vulnerable communities. She is especially interested in exploring how spatial science and community learning can be used supplementary in natural hazard decision making. 
-| [Linkedin](https://www.linkedin.com/in/yvonne-dinh-140bb7123/) |
+Originally from the East Coast, Yvonne had little experience with fire hazard before the project but was excited to learn how it plays a role in the daily lives of vulnerable communities. She was especially interested in exploring how spatial science and community learning can be used supplementary in natural hazard decision making. 
+
+ | [Linkedin](https://www.linkedin.com/in/yvonne-dinh-140bb7123/) |
 
 ## Iris Foxfoot
 
 ![](images/iris.jpg){width=50%}
 
-Originally from the foothills of the Sierra Nevada Mountains, Iris spent the past three years investigating how wildfire, drought, and climate change impact forest biodiversity in the Sierras. She is thrilled to join this project and is especially excited to amplify local voices in the wildfire planning process.
-| [Linkedin](https://www.linkedin.com/in/iris-foxfoot-61958b202/) |
+Originally from the foothills of the Sierra Nevada Mountains, Iris spent the three years prior to grad school investigating how wildfire, drought, and climate change impact forest biodiversity in the Sierras. She was thrilled to join this project and to amplify local voices in the wildfire planning process.
+
+ | [Linkedin](https://www.linkedin.com/in/iris-foxfoot-61958b202/) |
 
 ## Elena Ortiz
 
 ![](images/elena.jpg){width=50%}
 
-As a recent transplant to the Central Coast, Elena is excited to be working on a project that allows her to deeply engage with and get to know the community. She is passionate about making the environmental decision-making and planning process more equitable, and believes this project can have that kind of lasting impact in Ventura County. 
-| [Linkedin](https://www.linkedin.com/in/emortiz/) |
+As a recent transplant to the Central Coast, Elena was excited to be working on a project that allowed her to deeply engage with and get to know the community. She is passionate about making the environmental decision-making and planning process more equitable, and believes this project can have that kind of lasting impact in Ventura County. 
+
+ | [Linkedin](https://www.linkedin.com/in/emortiz/) |
 
 ## Alison Sells
 
 ![](images/alison.jpg){width=50%}
 
-Born and raised in Southern California, Alison grew up in close proximity to fires and is excited to learn more about the specific needs of vulnerable populations in Ventura County. She is eager to help connect with key organizations that support and represent these communities to ensure that all voices are heard in environmental decision making. 
-| [Linkedin](https://www.linkedin.com/in/alisonsells/) |
+Born and raised in Southern California, Alison grew up in close proximity to fires and was excited to learn more about the specific needs of vulnerable populations in Ventura County. She interned directly with VRFSC and helped connect with key organizations that support and represent these communities to ensure that all voices are heard in environmental decision making. 
+
+ | [Linkedin](https://www.linkedin.com/in/alisonsells/) |
 
 ## Advisory Board
 
-Our internal advisory team includes Dr. Sarah Anderson and PhD. student Louis Graup.
+Our internal advisory team included Dr. Sarah Anderson and PhD. student Louis Graup.
 
-Our external advisors are Kate Furlong and Elaine Himmelfarb (Ventura Regional Fire Safe Council), Dr. Max Moritz (UCSB affiliate), Celine Moomey (Ventura County Fire Department).
+Our external advisors were Kate Furlong and Elaine Himmelfarb (Ventura Regional Fire Safe Council), Dr. Max Moritz (UCSB affiliate), Celine Moomey (Ventura County Fire Department).
